Ejemplos/Ejemplo26-Istio/selectividad-destination-rule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: selectividad-api
spec:
  host: selectividad-api
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
---
